--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,12 +3,14 @@
 WORKDIR /app
 
 ENV NODE_ENV=production
+ENV PORT=8080
 
 COPY package*.json ./
 RUN npm ci --omit=dev
 
 COPY . .
 
-EXPOSE 5000
+EXPOSE 8080
 
 CMD ["npm", "start"]
+
