--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,9 @@ FROM nginx:1.27-alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
-EXPOSE 80
+RUN rm -f /etc/nginx/conf.d/default.conf
+RUN echo 'server { listen 8080; location / { root /usr/share/nginx/html; try_files $uri $uri/ /index.html; } }' > /etc/nginx/conf.d/default.conf
+
+EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
