--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,6 +21,8 @@
     args:
       - build
       - --file=frontend/Dockerfile
+      - --build-arg
+      - VITE_API_URL=${_VITE_API_URL}
       - --tag=${_FRONTEND_IMAGE}:${SHORT_SHA}
       - --tag=${_FRONTEND_IMAGE}:latest
       - frontend
@@ -37,6 +39,7 @@ substitutions:
   _AR_REPO: europe-southwest1-docker.pkg.dev/onboarding-dev-487716/repo-onboarding-dev
   _BACKEND_IMAGE: ${_AR_REPO}/backend
   _FRONTEND_IMAGE: ${_AR_REPO}/frontend
+  _VITE_API_URL: https://onboarding-866351374703.europe-southwest1.run.app/api
 
 images:
   - ${_BACKEND_IMAGE}:${SHORT_SHA}
