--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,14 @@
 ﻿FROM node:20-alpine AS build
 
 WORKDIR /app
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
 COPY package*.json ./
 RUN npm ci
 
 COPY . .
+RUN test -n "$VITE_API_URL"
 RUN npm run build
 
 FROM nginx:1.27-alpine
